# document-rotation

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-07-document-rotation-implementation.md  2026-07-08-recognition-candidate-selection.md
docs/superpowers/specs/: 2026-07-07-document-rotation-design.md
scripts/: __init__.py  benchmark_public_samples.py  setup_models.py
src/medical_doc_rotation/: __init__.py  cli.py  config.py  decision.py  geometry.py  image_ops.py  pipeline.py  triton_client.py  types.py  validation.py
tests/: test_benchmark_public_samples.py  test_cli.py  test_decision.py  test_geometry.py  test_image_ops.py  test_pipeline.py  test_setup_models.py  test_triton_adapters.py  test_validation.py
